BK/logs/dag_id=first_dag/run_id=manual__2023-12-15T135641.349567+0000/task_id=send_email/attempt=1.log
[2023-12-15T13:56:43.284+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: first_dag.send_email manual__2023-12-15T13:56:41.349567+00:00 [queued]>
[2023-12-15T13:56:43.296+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: first_dag.send_email manual__2023-12-15T13:56:41.349567+00:00 [queued]>
[2023-12-15T13:56:43.296+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-15T13:56:43.312+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): send_email> on 2023-12-15 13:56:41.349567+00:00
[2023-12-15T13:56:43.316+0000] {standard_task_runner.py:57} INFO - Started process 3695 to run task
[2023-12-15T13:56:43.319+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'first_dag', 'send_email', 'manual__2023-12-15T13:56:41.349567+00:00', '--job-id', '32', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmpikyn51ap']
[2023-12-15T13:56:43.321+0000] {standard_task_runner.py:85} INFO - Job 32: Subtask send_email
[2023-12-15T13:56:43.597+0000] {task_command.py:416} INFO - Running <TaskInstance: first_dag.send_email manual__2023-12-15T13:56:41.349567+00:00 [running]> on host ef1922c04df9
[2023-12-15T13:56:43.845+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='first_dag' AIRFLOW_CTX_TASK_ID='send_email' AIRFLOW_CTX_EXECUTION_DATE='2023-12-15T13:56:41.349567+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-15T13:56:41.349567+00:00'
[2023-12-15T13:56:43.894+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/first_dag.py", line 28, in connect
    cursor.execute(
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: ".")
LINE 2:              orders_orderitem.id as id_order,
                                     ^

[2023-12-15T13:56:44.048+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=first_dag, task_id=send_email, execution_date=20231215T135641, start_date=20231215T135643, end_date=20231215T135644
[2023-12-15T13:56:44.065+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 32 for task send_email (ОШИБКА:  ошибка синтаксиса (примерное положение: ".")
LINE 2:              orders_orderitem.id as id_order,
                                     ^
; 3695)
[2023-12-15T13:56:44.094+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-15T13:56:44.152+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
